objects/SIC__c.object
<CustomObject>
    <description>Object used to store relationships between SIC codes and SPWR Industries.</description>
    <fields>
        <fullName>First_Level__c</fullName>
        <label>First Level</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPWR_Industry_Type__c</fullName>
        <label>SPWR Industry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention Center/Arena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation - Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution/Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government - Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government - Non-Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Special District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison/Correctional Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resort/Hotel/Casino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roofing Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School - k12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping/Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Level__c</fullName>
        <label>Second Level</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Level__c</fullName>
        <label>Third Level</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>SIC</label>
    <nameField>
        <displayFormat>SIC-{0000}</displayFormat>
        <label>SIC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>